# music-data-analyst-agent

./: .env.example  .gitignore  README.md  index.html  main.py  pyproject.toml
agents/: orchestrator.py
artifacts/: 20260407_033647_billie_eilish_music_comparison_hypothesis.md  20260407_051730_hypothesis_report.md.md  20260412_155127_hip_hop_chart_2025_hypothesis.md  20260412_215957_duration_popularity_hypothesis.md  20260412_220548_global_top_25_hits_hypothesis.md
data-analyst-agent-update/: Dockerfile  README.md
data-analyst-agent-update/agents/: orchestrator.py
data-analyst-agent-update/artifacts/: 20260412_141646_charting_track_characteristics_2025.md.md  20260412_154511_top_pop_songs_hypothesis.md
data-analyst-agent-update/static/: index.html
data-analyst-agent-update/tools/: analysis_tools.py  deezer_tools.py  lastfm_tools.py
static/: index.html
tools/: artifact_tools.py  chart_tools.py  deezer_tools.py  spotify_tools.py  wikipedia_tools.py
