[project]
name = "musicanalyst"
version = "0.1.0"
description = "Multi-agent music trend analysis system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "google-adk>=0.3.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "matplotlib>=3.8.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools"]
